Fix menu overlapping

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -385,7 +385,7 @@ main {
       // mobile nav
       gap: 0 8px;
       height: auto !important;
-      padding-right: 60px;
+      padding-right: 60px !important;
       grid-template-columns: 40px 1fr;
       grid-template-areas:
         "logo phone cart"
